--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'On English Poetry
 
   Being an Irregular Approach to the Psychology of This Art,
